--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -15,7 +15,7 @@
   ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<md-toolbar show-if-fullscreen=false>
+<md-toolbar class="md-small-toolbar" show-if-fullscreen=false>
   <div class="md-toolbar-tools">
     <h1>
       <span class="md-display-1">New/s/leak</span>
@@ -50,19 +50,19 @@
     <span flex></span>
 
     <md-button class="md-raised" ng-href="https://www.volkswagenstiftung.de/" target="_blank" aria-label="VW">
-      <img style="height: 43px; object-fit:contain" src="./assets/images/Logo_Volkswagenstiftung.svg.png">
+      <img class="institute-logo" src="./assets/images/Logo_Volkswagenstiftung.svg.png">
     </md-button>
 
     <md-button class="md-raised" ng-href="http://www.spiegel.de/" target="_blank" aria-label="Spiegel">
-      <img style="height: 43px; object-fit:contain" src="./assets/images/logo_der_spiegel.jpg">
+      <img class="institute-logo" src="./assets/images/logo_der_spiegel.jpg">
     </md-button>
 
     <md-button class="md-raised" ng-href="https://www.lt.tu-darmstadt.de/de/lt-home/" target="_blank" aria-label="LT">
-      <img style="height: 43px; object-fit:contain" src="./assets/images/logo_language_technology_group.png">
+      <img class="institute-logo" src="./assets/images/logo_language_technology_group.png">
     </md-button>
 
     <md-button class="md-raised" ng-href="http://www.gris.tu-darmstadt.de" target="_blank" aria-label="GRIS">
-      <img style="height: 43px; object-fit:contain" src="./assets/images/logo_graphisch-interaktive_systeme.png">
+      <img class="institute-logo" src="./assets/images/logo_graphisch-interaktive_systeme.png">
     </md-button>
   </div>
 </md-toolbar>
