--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -22,6 +22,7 @@
     <a class="navbar-brand title" href="#">new/s/leak</a>
 
     <md-input-container md-theme="control-theme">
+      <h4 class="md-title" style="margin: 0; padding: 0; color: white;">Switch Dataset below</h4>
       <md-select ng-model="selectedDataset" ng-change="changeDataset()" aria-label="dataset">
         <md-option ng-repeat="data in datasets" ng-value="data" ng-selected="$index === 0">
           {{data}}
