Add settings menu

--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -30,6 +30,10 @@
       </md-select>
     </md-input-container>
 
+    <md-button class="md-raised md-small" ng-click="showSettings()" aria-label="Settings">
+      <md-icon md-font-icon="fa fa-cog fa-2x"></md-icon>
+    </md-button>
+
     <md-button class="md-raised md-small" aria-label="Fullscreen" ngsf-toggle-fullscreen>
       <md-tooltip show-if-fullscreen=false> Enter Fullscreen </md-tooltip>
       <md-tooltip show-if-fullscreen=true> Exit Fullscreen </md-tooltip>
