--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -74,6 +74,52 @@ div.vis-network div.vis-navigation div.vis-button {
     margin-bottom: 20px;
 }
 
+.vis-navigation .vis-button:hover:before {
+    background: beige;
+    display: block;
+    color: black;
+    padding: 3px;
+    position: relative;
+    border: 1px solid lightgray;
+    width: 80px;
+    left: -70px;
+    top: -30px;
+    z-index: 1000;
+    text-align: center;
+}
+
+.vis-navigation .vis-button:hover.vis-up:before {
+    left: 30px;
+    content: "Scroll up";
+}
+
+.vis-navigation .vis-button:hover.vis-down:before {
+    left: 30px;
+    content: "Scroll down";
+}
+
+.vis-navigation .vis-button:hover.vis-right:before {
+    left: 30px;
+    content: "Scroll right";
+}
+
+.vis-navigation .vis-button:hover.vis-left:before {
+    left: 30px;
+    content: "Scroll left";
+}
+
+.vis-navigation .vis-button:hover.vis-zoomOut:before {
+    content: "Zoom out";
+}
+
+.vis-navigation .vis-button:hover.vis-zoomIn:before {
+    content: "Zoom in";
+}
+
+.vis-navigation .vis-button:hover.vis-zoomExtends:before {
+    content: "Reset focus";
+}
+
 div.popupMenu {
     position: absolute;
     top: 0px;
