--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -59,10 +59,10 @@
 
                 <main id="center-box" resizable r-directions="['right']" r-flex="true" flex="none">
                     <!-- selectedTab is defined in AppController -->
-                    <md-tabs md-selected="selectedTab.index" md-border-bottom md-autoselect layout-fill>
+                    <md-tabs md-selected="selectedTab.index" md-border-bottom md-autoselect layout-fill ngsf-fullscreen="FancyNetworkController">
 
                         <md-tab flex label="Network">
-                            <div id="network" ui-view="network"></div>
+                            <div id="network" ui-view="network" ></div>
                         </md-tab>
 
                         <div id="docii" ui-view="document"></div>
