Fokus-Knoten wird nun farblich hervorgehoben Kanten, an denen der Benutzer besonderes Interesse hat werden nun hervorgehoben Code optimiert

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -149,6 +149,11 @@ div.tooltip {
                                   not supported by any browser */
 }
 
+.glow {
+    filter:url(#glow);
+
+}
+
 
 /*
     ======================================
