--- a/public/partials/document_list.html
+++ b/public/partials/document_list.html
@@ -46,7 +46,7 @@
                 popover-placement="right"
                 popover-is-open="popover.isOpen[{{item.id}}]">
 
-                <a href="#" ng-click="loadFullDocument(item.id)">
+                <a href="#" ng-click="loadFullDocument(item)">
                     {{ item.metadata.Subject }} #{{item.id}}
                 </a>
             </li>
