Anzahl der Kanten pro Knoten ist nun im User-Interface einstellbar

--- a/public/partials/tools.html
+++ b/public/partials/tools.html
@@ -33,9 +33,12 @@
   <input ng-model="sliderMiscellaneousAmount.value" type="text"
          slider options="sliderMiscellaneousAmount.options"/>
 </div>
--->    <div class="col-md-9" style="padding-right: 50px;">
+-->   <div class="col-md-9" style="padding-right: 50px;">
         <div class="slider-container">
           <input ng-model="sliderEdgeAmount.value" type="text" slider options="sliderEdgeAmount.options"/>
+        </div>
+        <div class="slider-container">
+            <input ng-model="sliderEdgesPerNode.value" type="text" slider options="sliderEdgesPerNode.options"/>
         </div>
         <div class="slider-container">
           <input ng-model="sliderEdgeFrequency.value" type="text" slider options="sliderEdgeFrequency.options"/>
