Disable auto-complete caching

--- a/public/partials/document.html
+++ b/public/partials/document.html
@@ -45,7 +45,8 @@
                                     placeholder="Enter a tag"
                                     md-search-text="searchText"
                                     md-items="label in querySearch(doc, searchText)"
-                                    md-item-text="label">
+                                    md-item-text="label"
+                                    md-no-cache>
                                 <span md-highlight-text="searchText">{{label}}</span>
                             </md-autocomplete>
 
