switched to material design tabs

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -36,6 +36,7 @@
 
 
         <link rel="stylesheet" href="@routes.Assets.at("javascripts/libs/angular-material/angular-material.min.css")">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
 
 
 
