--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -35,8 +35,9 @@
         <link type="text/css" rel="stylesheet" href="@routes.Assets.at("stylesheets/style.css")">
 
 
-        <link rel="stylesheet" href="@routes.Assets.at("javascripts/libs/angular-material/angular-material.min.css")">
+        <link type="text/css" rel="stylesheet" href="@routes.Assets.at("javascripts/libs/angular-material/angular-material.min.css")">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 
 
