--- a/public/partials/network.html
+++ b/public/partials/network.html
@@ -49,3 +49,7 @@
 <div id="mynetwork">
     <vis-network data="graphData" options="graphOptions" layout-fill events="graphEvents"></vis-network>
 </div>
+
+<!--<div id="network-legend">
+    <vis-network data="legendData" options="legendOptions" events="legendEvents" layout-fill></vis-network>
+</div>-->
