--- a/public/partials/document_list.html
+++ b/public/partials/document_list.html
@@ -58,8 +58,26 @@
         <b style="text-decoration: underline;">{{ sourceShared.documentListInfo }}</b>
 
         <md-content>
+            <md-list>
+            <md-virtual-repeat-container id="vertical-container" style="height: 500px;">
+                <md-list-item
+                        md-virtual-repeat="item in virtualScroll"
+                        md-on-demand="true"
+                        md-item-size="50"
+                        class="repeated-item" flex="" ng-click="loadFullDocument(item)">
+                    {{ item.metadata.Subject }} #{{item.id}}
+                    <md-divider ng-if="!$last"></md-divider>
+
+
+                </md-list-item>
+
+
+            </md-virtual-repeat-container>
+            </md-list>
+        </md-content>
+<!--
             <md-list flex>
-                <md-list-item class="" ng-repeat="item in sourceShared.documentList" ng-click="loadFullDocument(item.id)">
+                <md-list-item class="" ng-repeat="item in sourceShared.documentList" ng-click="loadFullDocument(item)">
                         {{ item.metadata.Subject }} #{{item.id}}
                     <md-divider ng-if="!$last"></md-divider>
                     <md-tooltip md-direction="right">
@@ -75,7 +93,8 @@
 
                 </md-list-item>
             </md-list>
-        </md-content>
+
+        -->
         <!-- Show toast when no documents in the iterator and the doc list is not empty -->
         <span ng-init="showAllLoaded()" ng-if="iteratorEmpty && hits > 0"></span>
     </div>
